--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   compile:
-    runs-on: ubuntu-latest
+    #label
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +21,7 @@ jobs:
       run: mvn compile
         
   security-cheks:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: compile
 
     steps:
@@ -31,7 +32,7 @@ jobs:
         wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
         echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
         sudo apt-get update -y
-        sudo apt-get install trivy -y
+        sudo apt-get install -y trivy
                                       
     - name: Trivy Fs scan
       run: trivy fs --format table -o fs-report.json .
@@ -39,5 +40,23 @@ jobs:
       run: sudo apt install gitleaks -y
     - name: Gitleaks Code Scan
       run: gitleaks detect source . -r gitleaks-repord.json
+      
+  test:
+    #label
+    runs-on: self-hosted
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Unit Test Cases
+      run: mvn test
+
+
+  
   
                         
