--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -123,7 +123,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: adijaiswal/bankapp:latest
+        tags: hemantdimri/bankapp:latest
         file: ./Dockerfile                     
 
 
