--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -132,63 +132,29 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
-      
-    # Check if AWS CLI is already installed
-    - name: Check AWS CLI
+    - name: Install AWS CLI
       run: |
-        if ! command -v aws &> /dev/null; then
-          echo "AWS CLI not found, installing..."
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-        else
-          echo "AWS CLI already installed: $(aws --version)"
-        fi
-        
-    # Configure AWS credentials
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@v4  # Changed: v2 → v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-south-1
-        
-    # Debug: Verify AWS credentials are working
-    - name: Verify AWS credentials
-      run: |
-        echo "Testing AWS credentials..."
-        aws sts get-caller-identity
-        echo "✅ AWS credentials are valid!"
-        
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
       with:
         version: latest
-        
-    # Update kubeconfig using AWS CLI (recommended method)
-    - name: Configure kubeconfig for EKS
+    - name: Configure kubeconfig
       run: |
-        echo "Updating kubeconfig for EKS cluster..."
-        aws eks update-kubeconfig --region ap-south-1 --name devopsshack-cluster
-        
-    # Alternative: Use the secret if you prefer
-    # - name: Configure kubeconfig (from secret)
-    #   run: |
-    #     mkdir -p $HOME/.kube
-    #     echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
-    #     chmod 600 $HOME/.kube/config
-        
-    # Debug: Verify kubectl connectivity
-    - name: Verify kubectl connectivity
-      run: |
-        echo "Testing kubectl connection..."
-        kubectl cluster-info
-        kubectl get nodes
-        
+        mkdir -p $HOME/.kube
+        echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
+        chmod 600 $HOME/.kube/config    # Added: Fix permissions
     - name: Deploy to EKS
       run: |
         kubectl apply -f ds.yml
-        echo "✅ Deployment successful!"
 
   
   
