--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -134,9 +134,13 @@ jobs:
       uses: actions/checkout@v4
     - name: Install AWS CLI
       run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
+        if ! command -v aws &> /dev/null; then
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+        else
+          echo "AWS CLI already installed: $(aws --version)"
+        fi
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4  # Changed: v2 → v4
       with:
@@ -151,7 +155,7 @@ jobs:
       run: |
         mkdir -p $HOME/.kube
         echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
-        chmod 600 $HOME/.kube/config    # Added: Fix permissions
+        chmod 600 $HOME/.kube/config  # Added: Fix permissions
     - name: Deploy to EKS
       run: |
         kubectl apply -f ds.yml
